lib helper esEs

--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -17,6 +17,9 @@ body{
 	font-family: 'roboto',Arial,Helvetica,sans-serif;
 	color: #444;
 	background-image: url('/media/img/background/main.jpg');
+	
+	overflow-x:scroll;
+	overflow-y:hidden;
 }
 pre {
 	background: black;
