--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -322,7 +322,7 @@ textarea.cke_source{
 
 
 .loader{
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	background: black;
@@ -335,7 +335,7 @@ textarea.cke_source{
 	width: 25px;
 	height: 25px;
 	
-	position: absolute;
+	position: fixed;
 	left: 0;
 	right: 0;
 	top: 0;
