--- a/frontend/assets/lib/trascender/main.css
+++ b/frontend/assets/lib/trascender/main.css
@@ -1,5 +1,5 @@
 /********/
-/*LOADER*/
+/*LOADER:TODO:a futuro solo quedara el por #id*/
 /********/
 .loader{
 	position: fixed;
@@ -21,7 +21,18 @@
 	bottom: 0;
 	margin: auto;
 }
-
+#loader{		
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.8);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
+}
 /***************/
 /*AUTOCOMPLETAR*/
 /***************/
